--- a/articles/lab-services/TOC.yml
+++ b/articles/lab-services/TOC.yml
@@ -149,6 +149,8 @@ items:
         href: devtest-lab-import-vm.md
       - name: Starta eller stoppa en virtuell dator med PowerShell eller CLI
         href: use-command-line-start-stop-virtual-machines.md
+      - name: Starta virtuella datorer med Automation-runbooks
+        href: start-machines-use-automation-runbooks.md
     - name: Använd miljöer i ett labb
       items:
       - name: Skapa en miljö
@@ -157,6 +159,10 @@ items:
         href: devtest-lab-configure-use-public-environments.md
       - name: Skapa en miljö med Service Fabric-kluster
         href: create-environment-service-fabric-cluster.md
+      - name: Ansluta en miljö till labbets virtuella nätverk
+        href: connect-environment-lab-virtual-network.md
+      - name: Integrera miljöer i din Azure DevOps CI/CD-pipeline
+        href: integrate-environments-devops-pipeline.md
     - name: Säker åtkomst till labb
       items:
       - name: Lägg till labbägare och användare
@@ -242,7 +248,7 @@ items:
     - name: CLI
       href: /cli/azure/lab
     - name: PowerShell
-      href: /powershell/module/azurerm.devtestlabs/#devtest_labs
+      href: /powershell/module/az.devtestlabs
     - name: REST-API
       href: https://docs.microsoft.com/rest/api/dtl/
     - name: Resource Manager-mall
@@ -271,9 +277,9 @@ items:
       href: https://azure.microsoft.com/resources/videos/index/?services=devtest-lab
     - name: Vanliga frågor och svar
       href: devtest-lab-faq.md
-ms.openlocfilehash: 4c96945c5e7a0aed52d3148c7dbf084a8d8b9f29
-ms.sourcegitcommit: 22ad896b84d2eef878f95963f6dc0910ee098913
+ms.openlocfilehash: bee44d9ce7378bd48960c47ed9be9c7f53e23110
+ms.sourcegitcommit: a60a55278f645f5d6cda95bcf9895441ade04629
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/29/2019
-ms.locfileid: "58651181"
+ms.lasthandoff: 04/03/2019
+ms.locfileid: "58886683"
