--- a/articles/active-directory/develop/TOC.yml
+++ b/articles/active-directory/develop/TOC.yml
@@ -157,13 +157,13 @@ items:
         items:
         - name: Konfigurera rollanspråk
           href: active-directory-enterprise-app-role-management.md
-        - name: Anpassa anspråk
+        - name: Anpassa anspråk – Portal
           href: active-directory-saml-claims-customization.md
-        - name: Anpassa anspråk (förhandsversion)
+        - name: Anpassa anspråk – PowerShell
           href: active-directory-claims-mapping.md
-        - name: Konfigurera valfria anspråk (förhandsversion)
+        - name: Konfigurera valfria anspråk
           href: active-directory-optional-claims.md
-        - name: Konfigurera livslängd för token (förhandsversion)
+        - name: Konfigurera livslängd för token
           href: active-directory-configurable-token-lifetimes.md
       - name: ADAL-regelverk för felhantering
         href: active-directory-devhowto-adal-error-handling.md
@@ -370,13 +370,13 @@ items:
       items:
       - name: Konfigurera rollanspråk
         href: active-directory-enterprise-app-role-management.md
-      - name: Anpassa anspråk
+      - name: Anpassa anspråk – Portal
         href: active-directory-saml-claims-customization.md
-      - name: Anpassa anspråk (förhandsversion)
+      - name: Anpassa anspråk – PowerShell
         href: active-directory-claims-mapping.md
-      - name: Konfigurera valfria anspråk (förhandsversion)
+      - name: Konfigurera valfria anspråk
         href: active-directory-optional-claims.md
-      - name: Konfigurera livslängd för token (förhandsversion)
+      - name: Konfigurera livslängd för token
         href: active-directory-configurable-token-lifetimes.md
     - name: Tillämpningskonfiguration
       items:
@@ -443,9 +443,9 @@ items:
     href: developer-support-help-options.md
   - name: Hanterade identiteter för Azure-resurser
     href: https://docs.microsoft.com/azure/active-directory/managed-service-identity/overview
-ms.openlocfilehash: 4b1ce1f30f76553174c0c13e04f020e22d6c8d2d
-ms.sourcegitcommit: d89b679d20ad45d224fd7d010496c52345f10c96
+ms.openlocfilehash: 974758ddcaa4d855b395e982b6bc9a3b0b72e130
+ms.sourcegitcommit: a60a55278f645f5d6cda95bcf9895441ade04629
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/12/2019
-ms.locfileid: "57792063"
+ms.lasthandoff: 04/03/2019
+ms.locfileid: "58886615"
