--- a/articles/azure-functions/TOC.yml
+++ b/articles/azure-functions/TOC.yml
@@ -69,6 +69,8 @@ items:
   - name: Jämför version 1.x and 2.x
     displayName: migrate, migration
     href: functions-versions.md
+  - name: Premiumplan
+    href: functions-premium-plan.md
   - name: Skalning och värdtjänster
     href: functions-scale.md
   - name: Utlösare och bindningar
@@ -107,6 +109,8 @@ items:
     href: functions-best-practices.md
   - name: Functions-proxyservrar
     href: functions-proxies.md
+  - name: Nätverksalternativ
+    href: functions-networking-options.md
   - name: IP-adresser
     href: ip-addresses.md
   - name: Lokala funktioner
@@ -267,6 +271,8 @@ items:
       href: functions-host-json.md
     - name: Functions 1.x
       href: functions-host-json-v1.md
+  - name: Vanliga frågor och svar om nätverk
+    href: functions-networking-faq.md
   - name: Referens för OpenAPI
     href: functions-api-definition.md
 - name: Resurser
@@ -295,9 +301,9 @@ items:
     href: https://github.com/Azure/Azure-Functions/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=functions&updatetype=&platform=
-ms.openlocfilehash: 929a483ecdf9e8345c99c036b57631b2b1110b03
-ms.sourcegitcommit: 81fa781f907405c215073c4e0441f9952fe80fe5
+ms.openlocfilehash: 92eed4424d952edef4b2dc203c535f1ab26ed28c
+ms.sourcegitcommit: 0a3efe5dcf56498010f4733a1600c8fe51eb7701
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/25/2019
-ms.locfileid: "58403541"
+ms.lasthandoff: 04/03/2019
+ms.locfileid: "58894584"
