--- a/articles/frontdoor/TOC.yml
+++ b/articles/frontdoor/TOC.yml
@@ -23,8 +23,8 @@ items:
     href: front-door-quickstart-template-samples.md
 - name: Begrepp
   items:
-  - name: Säkerhet för programskikt
-    href: front-door-application-security.md
+  - name: Brandvägg för webbaserade program
+    href: waf-overview.md
   - name: Serverdelar och serverdelspooler
     href: front-door-backend-pool.md
   - name: Cachelagring med Front Door
@@ -58,7 +58,11 @@ items:
     - name: Tillåtna certifikatutfärdare
       href: front-door-troubleshoot-allowed-ca.md
 - name: VANLIGA FRÅGOR OCH SVAR
-  href: front-door-faq.md
+  items:
+  - name: Vanliga frågor och svar om Front Door
+    href: front-door-faq.md
+  - name: Vanliga frågor och svar om WAF
+    href: waf-faq.md
 - name: Referens
   items:
   - name: Azure CLI
@@ -77,9 +81,9 @@ items:
     href: https://azure.microsoft.com/pricing/calculator/
   - name: Tjänstuppdateringar
     href: https://azure.microsoft.com/updates/?product=frontdoor
-ms.openlocfilehash: 98a5d50b8dc8195a0943379c2570711d01db268a
-ms.sourcegitcommit: 04716e13cc2ab69da57d61819da6cd5508f8c422
+ms.openlocfilehash: 20afe50b6b17acb0f155769e95c5ec66c19c8fba
+ms.sourcegitcommit: 9f4eb5a3758f8a1a6a58c33c2806fa2986f702cb
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/02/2019
-ms.locfileid: "58850104"
+ms.lasthandoff: 04/03/2019
+ms.locfileid: "58906250"
