--- a/articles/frontdoor/index.yml
+++ b/articles/frontdoor/index.yml
@@ -1,15 +1,9 @@
 ### YamlMime:YamlDocument
-ms.openlocfilehash: 19e9bbafa1c560e7fa28be9945bc13cb0e342edc
-ms.sourcegitcommit: f20e43e436bfeafd333da75754cd32d405903b07
-ms.translationtype: HT
-ms.contentlocale: sv-SE
-ms.lasthandoff: 10/17/2018
-ms.locfileid: "49388569"
 documentType: LandingData
-title: Dokumentation om Azure Front Door Service (förhandsversion)
+title: Dokumentation om Azure Front Door Service
 metadata:
-  title: Dokumentation om Azure Front Door Service (förhandsversion)
-  meta.description: Azure Front Door Service provides a scalable and secure entry point for fast delivery of your global web applications. Learn how to use Front Door with our quickstarts, tutorials, and samples.
+  title: Dokumentation om Azure Front Door Service
+  meta.description: 'Azure Front Door Service provides a scalable and secure entry point for fast delivery of your global web applications. Learn how to use Front Door with our quickstarts, tutorials, and samples.'
   services: frontdoor
   author: dlepow
   ms.service: frontdoor
@@ -17,35 +11,35 @@ metadata:
   ms.date: 9/14/2018
   ms.author: danlep
 abstract:
-  description: Azure Front Door Service utgör en skalbar och säker startpunkt för snabb leverans av dina globala webbappar. Lär dig hur du använder Front Door med våra snabbstarter, självstudier och exempel.
+  description: 'Azure Front Door Service utgör en skalbar och säker startpunkt för snabb leverans av dina globala webbappar. Lär dig hur du använder Front Door med våra snabbstarter, självstudier och exempel.'
 sections:
-- title: Snabbstarter på 5 minuter
-  items:
-  - type: paragraph
-    text: Skapa en Front Door för en global webbapp med hög tillgänglighet.
-  - type: list
-    style: icon48
+  - title: Snabbstarter på 5 minuter
     items:
-    - image:
-        src: https://docs.microsoft.com/media/common/i_portal.svg
-      text: Azure Portal
-      href: quickstart-create-front-door.md
-- title: Steg för steg-självstudier
-  items:
-  - type: paragraph
-    text: Lär dig hur du konfigurerar Azure Front Door Service för dina behov.
-  - type: list
-    style: unordered
+      - type: paragraph
+        text: Skapa en Front Door för en global webbapp med hög tillgänglighet.
+      - type: list
+        style: icon48
+        items:
+          - image:
+              src: 'https://docs.microsoft.com/media/common/i_portal.svg'
+            text: Azure Portal
+            href: quickstart-create-front-door.md
+  - title: Steg för steg-självstudier
     items:
-    - html: <a href="front-door-custom-domain.md">Lägg till en anpassad domän i din Front Door</a>
-    - html: <a href="front-door-custom-domain-https.md">Aktivera HTTPS för en anpassad domän</a>
-- title: Referens
-  items:
-  - type: list
-    style: cards
-    className: cardsD
+      - type: paragraph
+        text: Lär dig hur du konfigurerar Azure Front Door Service för dina behov.
+      - type: list
+        style: unordered
+        items:
+          - html: <a href="front-door-custom-domain.md">Lägg till en anpassad domän i din Front Door</a>
+          - html: <a href="front-door-custom-domain-https.md">Aktivera HTTPS för en anpassad domän</a>
+  - title: Referens
     items:
-    - title: Kommandorad
-      html: <p><a href="/cli/azure/ext/front-door">Azure CLI</a></p><p><a href="https://go.microsoft.com/fwlink/?linkid=2020942">Azure PowerShell</a></p>
-    - title: REST
-      html: <p><a href="/rest/api/frontdoor">REST-API</a></p>
+      - type: list
+        style: cards
+        className: cardsD
+        items:
+          - title: Kommandorad
+            html: '<p><a href="/cli/azure/ext/front-door">Azure CLI</a></p><p><a href="https://go.microsoft.com/fwlink/?linkid=2020942">Azure PowerShell</a></p>'
+          - title: REST
+            html: <p><a href="/rest/api/frontdoor">REST-API</a></p>
