--- a/articles/machine-learning/service/toc.yml
+++ b/articles/machine-learning/service/toc.yml
@@ -21,7 +21,7 @@ items:
     displayName: workspace
     href: quickstart-run-cloud-notebook.md
   - name: Experimentera med en lokal notebook-fil
-    displayName: workspace install sdk
+    displayName: workspace, install, sdk
     href: quickstart-run-local-notebook.md
 - name: Självstudier
   items:
@@ -41,7 +41,7 @@ items:
       displayName: automl, automated, auto ml,
       href: tutorial-auto-train-models.md
 - name: Exempel
-  displayName: example, examples, jupyter, azure notebooks, python, notebook, github
+  displayName: example, examples, Jupyter, azure notebooks, python, notebook, GitHub
   href: samples-notebooks.md
 - name: Begrepp
   items:
@@ -54,6 +54,9 @@ items:
   - name: Modellhantering
     displayName: deploy, deployment
     href: concept-model-management-and-deployment.md
+  - name: Modelltolkning
+    displayName: explainability
+    href: machine-learning-interpretability-explainability.md
   - name: Accelerera med FPGA
     href: concept-accelerate-with-fpgas.md
   - name: Pipelines för maskininlärning
@@ -81,20 +84,20 @@ items:
   - name: Konfigurera utvecklingsmiljön 
     items:
     - name: Konfigurera utvecklingsmiljöer
-      displayName: local, remote, azure notebooks, notebook, jupyter, dsvm, Databricks, ADB
+      displayName: local, remote, azure notebooks, notebook, Jupyter, dsvm, Databricks, ADB
       href: how-to-configure-environment.md
     - name: Visual Studio Code-tillägg
-      displayName: Visual Studio Code, vscode, tools, ai, vs
+      displayName: Visual Studio Code, VSCode, tools, ai, vs
       items:
       - name: Kom igång
         href: how-to-vscode-tools.md
       - name: Träna och distribuera
         href: how-to-vscode-train-deploy.md
   - name: Arbeta med data
-    displayName: data prep, etl, elt, data preparation
+    displayName: data prep, ETL, ELT, data preparation
     items:
     - name: Utforska och förbereda data
-      displayName: data prep, etl, elt, data preparation
+      displayName: data prep, ETL, ELT, data preparation
       items:
       - name: Läsa in data
         href: how-to-load-data.md
@@ -108,7 +111,7 @@ items:
   - name: Inlärningsmodeller
     items:
     - name: Konfigurera miljöer för utbildning
-      displayName: compute target, dsvm, Data Science Virtual Machine, local, cluster, aci, container instance, Databricks, data lake, lake, hdi, hdinsights
+      displayName: compute target, dsvm, Data Science Virtual Machine, local, cluster, ACI, container instance, Databricks, data lake, lake, HDI, HDInsight
       href: how-to-set-up-training-targets.md
     - name: Skapa uppskattningar i utbildning
       href: how-to-train-ml-models.md
@@ -169,7 +172,7 @@ items:
     displayName: cli extension command line command-line az ci/cd automate automated
     href: reference-azure-machine-learning-cli.md
   - name: Exportera och ta bort data
-    displayName: gdpr
+    displayName: GDPR
     href: how-to-export-delete-data.md
 - name: Referens
   items:
@@ -196,14 +199,16 @@ items:
   - name: Kända problem
     displayName: bugs errors troubleshoot
     href: resource-known-issues.md
-  - name: Få support
-    href: support-for-aml-services.md
+  - name: Användarforum
+    href: https://aka.ms/aml-forum-service
+  - name: Stack Overflow
+    href: https://stackoverflow.com/questions/tagged/azure-machine-learning
   - name: Jämför våra ML-produkter
     href: /azure/architecture/data-guide/technology-choices/data-science-and-machine-learning
     maintainContext: true
-ms.openlocfilehash: 4b38742208ad88b8dd1eeff8cce0d0055294ec12
-ms.sourcegitcommit: d83fa82d6fec451c0cb957a76cfba8d072b72f4f
+ms.openlocfilehash: cbe10e172a66e7bf43baa3a96900b244b8eb733c
+ms.sourcegitcommit: f093430589bfc47721b2dc21a0662f8513c77db1
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 04/02/2019
-ms.locfileid: "58862938"
+ms.lasthandoff: 04/04/2019
+ms.locfileid: "58918747"
