--- a/articles/security-center/TOC.yml
+++ b/articles/security-center/TOC.yml
@@ -15,6 +15,8 @@ items:
     href: quick-onboard-windows-computer.md
   - name: Linux-datorer
     href: quick-onboard-linux-computer.md
+  - name: Virtuella Azure Stack-datorer
+    href: quick-onboard-azure-stack.md
   expanded: true
 - name: Självstudier
   items:
@@ -193,9 +195,9 @@ items:
     href: https://azure.microsoft.com/regions/services/
   - name: Felsöka
     href: security-center-troubleshooting-guide.md
-ms.openlocfilehash: b0acd0948589e4045e7c9dbd9cc423bfd0ae1e3d
-ms.sourcegitcommit: dec7947393fc25c7a8247a35e562362e3600552f
+ms.openlocfilehash: 582597639fb8681f4ac2894fb1cac7fe4ec17fcf
+ms.sourcegitcommit: 0a3efe5dcf56498010f4733a1600c8fe51eb7701
 ms.translationtype: HT
 ms.contentlocale: sv-SE
-ms.lasthandoff: 03/19/2019
-ms.locfileid: "58201185"
+ms.lasthandoff: 04/03/2019
+ms.locfileid: "58895147"
